3.10.3/_sources/_tags/plot-type-line.rst.txt
.. _sphx_tag_plot-type-line:

All tags: plot-type: line
#########################

.. toctree::
    :maxdepth: 1
    :caption: With this tag

    ../gallery/animation/bayes_update.rst
    ../gallery/color/color_by_yvalue.rst
    ../gallery/color/color_cycle_default.rst
    ../gallery/color/color_demo.rst
    ../gallery/color/individual_colors_from_cmap.rst
    ../gallery/lines_bars_and_markers/cohere.rst
    ../gallery/lines_bars_and_markers/csd_demo.rst
    ../gallery/lines_bars_and_markers/curve_error_band.rst
    ../gallery/lines_bars_and_markers/lines_with_ticks_demo.rst
    ../gallery/lines_bars_and_markers/markevery_demo.rst
    ../gallery/lines_bars_and_markers/masked_demo.rst
    ../gallery/lines_bars_and_markers/multicolored_line.rst
    ../gallery/lines_bars_and_markers/psd_demo.rst
    ../gallery/lines_bars_and_markers/spectrum_demo.rst
    ../gallery/lines_bars_and_markers/step_demo.rst
    ../gallery/lines_bars_and_markers/timeline.rst
    ../gallery/lines_bars_and_markers/vline_hline_demo.rst
    ../gallery/mplot3d/2dcollections3d.rst
    ../gallery/subplots_axes_and_figures/auto_subplots_adjust.rst
    ../gallery/subplots_axes_and_figures/axes_demo.rst
    ../gallery/subplots_axes_and_figures/axes_margins.rst
    ../gallery/subplots_axes_and_figures/axes_props.rst
    ../gallery/subplots_axes_and_figures/axhspan_demo.rst
    ../gallery/subplots_axes_and_figures/axis_equal_demo.rst
    ../gallery/subplots_axes_and_figures/broken_axis.rst
    ../gallery/subplots_axes_and_figures/custom_figure_class.rst
    ../gallery/subplots_axes_and_figures/fahrenheit_celsius_scales.rst
    ../gallery/subplots_axes_and_figures/figure_title.rst
    ../gallery/subplots_axes_and_figures/ganged_plots.rst
    ../gallery/subplots_axes_and_figures/invert_axes.rst
    ../gallery/subplots_axes_and_figures/multiple_figs_demo.rst
    ../gallery/subplots_axes_and_figures/secondary_axis.rst
    ../gallery/subplots_axes_and_figures/share_axis_lims_views.rst
    ../gallery/subplots_axes_and_figures/shared_axis_demo.rst
    ../gallery/subplots_axes_and_figures/subplot.rst
    ../gallery/subplots_axes_and_figures/subplots_demo.rst
    ../gallery/subplots_axes_and_figures/two_scales.rst
    ../gallery/widgets/polygon_selector_simple.rst
